[tool.poetry]
name = "palom"
version = "2024.12.1"
description = "Piecewise alignment for layers of mosaics"
authors = ["Yu-An Chen <atwood12@gmail.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/palom/"
repository = "https://github.com/Yu-AnChen/palom"
keywords = [
    "microscopy",
    "multiplex imaging",
    "image registration",
    "digital pathology",
    "atlas",
]

[tool.poetry.dependencies]
python = "^3.7.8"
scikit-image = ">=0.18, <0.20"
scikit-learn = ">=0.24"
opencv-python-headless = ">=4.9"
zarr = ">=2.17, <3"
tifffile = ">=2021.10.12, <=2024.7.2"
imagecodecs = ">=2021.11.11"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
openslide-bin = ">=4.0.0.2"
openslide-python = ">=1.3"
dask = ">=2021.10.0"
numpy = "^1.21.3"
yamale = "^4.0.2"
loguru = "^0.5.3"
ome-types = ">0.3"
pint = ">=0.21"
slideio = ">=2.6.3, <2.7"
fire = ">=0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
palom-svs = "palom.cli.svs:main"
palom-svs-helper = "palom.cli.helper:main"
palom-align-he = "palom.cli.align_he:main"
palom-pyramid = "palom.cli.pyramid_tools:main"
palom-rgb-compress = "palom.cli.compress_rgb_jpeg:main"