[tool.poetry]
name = "palom"
version = "2024.12.1"
description = "Piecewise alignment for layers of mosaics"
authors = ["Yu-An Chen <atwood12@gmail.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/palom/"
repository = "https://github.com/Yu-AnChen/palom"
keywords = [
    "microscopy",
    "multiplex imaging",
    "image registration",
    "digital pathology",
    "atlas",
]

[tool.poetry.dependencies]
python = ">=3.10"
scikit-image = ">=0.23"
scikit-learn = ">=1.4"
opencv-python-headless = ">=4.9"
zarr = ">=2.17, <3"
tifffile = ">=2024"
imagecodecs = ">=2024"
matplotlib = ">=3.8.3"
tqdm = ">=4.66.2"
openslide-bin = ">=4.0.0.2"
openslide-python = ">=1.3"
scipy = ">=1.12.0"
dask = ">=2024"
numpy = ">=1.26.3, <2"
yamale = "^4.0.2"
loguru = ">=0.7.0"
ome-types = ">=0.5.0"
pint = ">=0.23"
slideio = ">=2.6.3, <2.7"
fire = ">=0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
palom-svs = "palom.cli.svs:main"
palom-svs-helper = "palom.cli.helper:main"
palom-align-he = "palom.cli.align_he:main"
palom-pyramid = "palom.cli.pyramid_tools:main"
palom-rgb-compress = "palom.cli.compress_rgb_jpeg:main"
