[project]
name = "palom"
version = "2025.7.1"
description = "Piecewise alignment for layers of mosaics"
license = { text = "MIT" }
authors = [{ name = "Yu-An Chen", email = "atwood12@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "microscopy",
    "multiplex imaging",
    "image registration",
    "digital pathology",
    "atlas",
]
dependencies = [
    "scikit-image>=0.18,<0.20",
    "scikit-learn>=0.24",
    "opencv-python-headless>=4.9",
    "zarr>=2.17,<3",
    "tifffile>=2021.10.12,<=2024.7.2",
    "imagecodecs>=2021.11.11",
    "matplotlib>=3.4.3",
    "tqdm>=4.62.3",
    "openslide-python>=1.3",
    "dask>=2021.10.0",
    "numpy<2",
    "yamale>=4,<5",
    "loguru>=0.5.3",
    "ome-types>=0.5",
    "pint>=0.21",
    "fire>=0.6.0",
]

[project.urls]
homepage = "https://pypi.org/project/palom/"
repository = "https://github.com/Yu-AnChen/palom"

[project.optional-dependencies]
openslide = ["openslide-bin>=4.0.0.2"]
vsi = ["slideio>=2.7.1"]
all = ["palom[openslide,vsi]"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
palom-svs = "palom.cli.svs:main"
palom-svs-helper = "palom.cli.helper:main"
palom-align-he = "palom.cli.align_he:main"
palom-pyramid = "palom.cli.pyramid_tools:main"
palom-rgb-compress = "palom.cli.compress_rgb_jpeg:main"
